kube-basics/services/debug.yml
apiVersion: v1
kind: Pod
metadata:
   name: podebug
spec:
   containers:
      - name: centos
        image: centos:7
        command: ["sleep","3600"]
