kube-basics/services/clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
   name: frontend-svc
spec:
   selector:
      tier: frontend
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
