kube-basics/services/load-balencer.yml
---
apiVersion: v1
kind: Service
metadata:
   name: frontend-svc
spec:
   type: LoadBalancer
   selector:
      tier: frontend
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
