kube-basics/services/ingress.yml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-0.32.0/deploy/static/provider/aws/deploy.yaml


---
apiVersion: v1
kind: Service
metadata:
   name: nginx-svc
spec:
   selector:
      app: nginx
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: httpd-svc
spec:
   selector:
      app: httpd
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: ingress
   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /

spec:
   rules:
      - host: "nginx.tadikonda.online"
        http:
           paths:
              - path: "/"
                backend:
                   serviceName: nginx-svc
                   servicePort: 80
      -  host: "httpd.tadikonda.online"
         http:
            paths:
               -  path: "/"
                  backend:
                     serviceName: httpd-svc
                     servicePort: 80
